--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
+    "@tsparticles/react": "^3.0.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
@@ -18,7 +19,6 @@
     "react-pdf": "^8.0.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
-    "react-tsparticles": "^2.12.2",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^4.0.0"
   },
