--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-pdf": "^8.0.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^4.0.0"
   },
